Write section descriptions in intro

--- a/h0rton_method.bib
+++ b/h0rton_method.bib
@@ -104,4 +104,25 @@
   year={2010},
   publisher={IOP Publishing}
 }
+
+@article{pearson2019use,
+  title={The use of convolutional neural networks for modelling large optically-selected strong galaxy-lens samples},
+  author={Pearson, James and Li, Nan and Dye, Simon},
+  journal={Monthly Notices of the Royal Astronomical Society},
+  volume={488},
+  number={1},
+  pages={991--1004},
+  year={2019},
+  publisher={Oxford University Press}
+}
+
+@article{aghanim2018planck,
+  title={Planck 2018 results. VI. Cosmological parameters},
+  author={Aghanim, N and Akrami, Yashar and Ashdown, M and Aumont, J and Baccigalupi, C and Ballardini, M and Banday, AJ and Barreiro, RB and Bartolo, N and Basak, S and others},
+  journal={arXiv preprint arXiv:1807.06209},
+  year={2018}
+}
+
+
 %{% endraw %}
+
