--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -1,18 +1,19 @@
 % There's a bad tension between early and late universe methods. Here's a method completely independent from those two that's also precise. It can serve as a check for unknown systematics that may be affecting either or both of the methods.
-The recent widening of the ``Hubble tension'' signals the need for rigorous tests of systematics in all cosmographic probes. The discrepancy in Hubble constant ($H_0$) measurements between early- and late-universe probes now lies at a $4 \sim 6\sigma$ level.  Particularly valuable in this context are strong gravitational time delays -- observed when a variable source such as an active galactic nucleus (AGN) is lensed by a massive foreground object. As light from the source travels different path lengths, we observe multiple images of the same source arriving at different times. The time delays can then be interpreted as a ``time delay distance,'' which is inversely proportional to $H_0$. As time delay cosmography is fully independent of $H_0$ determination methods using the local distance ladder and the cosmic microwave background (CMB), it can serve as a check against sources of bias that may be affecting either or both of the methods. 
+The recent widening of the ``Hubble tension'' signals the need for rigorous tests of systematics in all cosmographic probes. The discrepancy in Hubble constant ($H_0$) measurements between early- and late-universe probes now lies at a $4 \sim 6\sigma$ level. Particularly valuable in this context are strong gravitational time delays -- observed when a variable source such as a quasar is lensed by a massive foreground object. As light from the source travels different path lengths, we observe multiple images of the same source arriving at different times. The time delays can then be interpreted as a ``time delay distance,'' which is inversely proportional to $H_0$. As time delay cosmography is fully independent of $H_0$ determination methods using the local distance ladder and the cosmic microwave background (CMB), it can serve as a check against sources of bias that may be affecting either or both of the methods.
 
-To date, time delay cosmography has relied on a time-consuming and manual forward modeling of observations. This approach -- requiring up to two weeks per lens system under expert monitoring -- does not scale well to the prospects of upcoming large-scale surveys. The Large Synoptic Survey Telescope (LSST) is expected to discover tens of thousands of lens systems, among them hundreds of lensed quasars (\cite{collett2015population}; \cite{oguri2010gravitationally}).
-
-% efficiency, enable thorough systematics tests
-On the other hand, Deep neural networks (DNNs) have demonstrated state-of-the-art performance in extracting highly abstract information from complex image data. A variant, called Bayesian neural networks (BNNs), extends the pattern recognition potential of standard DNNs with variational posterior inference over its weights. \cite{hezaveh2017fast} were the first to demonstrate the efficacy of BNNs in modeling the lens posterior. Not only do BNN-based methods preclude the need for human supervision, once trained, a BNN model can be applied to 100 lens systems in $\sim 1$s on a single NVIDIA P100 GPU. This is 10 million times faster than the existing forward modeling method and enables sensitivity tests of a larger scale than previously feasible.
+% Here's a method that enables sensitivity tests within the time delay cosmography method 
+To date, time delay cosmography has relied on a time-consuming and manual forward modeling of observations. This approach -- requiring up to two weeks per lens system under expert monitoring -- does not scale well to the prospects of upcoming large-scale surveys. The Large Synoptic Survey Telescope (LSST) is expected to discover tens of thousands of lens systems, among them hundreds of lensed quasars (\cite{collett2015population}; \cite{oguri2010gravitationally}). On the other hand, Deep neural networks (DNNs) have demonstrated state-of-the-art performance in extracting highly abstract information from complex image data. A variant, called Bayesian neural networks (BNNs), extends the pattern recognition potential of standard DNNs with variational posterior inference over its weights. \cite{hezaveh2017fast} were the first to demonstrate the efficacy of BNNs in modeling the lens posterior. Not only do BNN-based methods preclude the need for human supervision, once trained, a BNN model can be applied to 100 lens systems in $\sim 1$s on a single NVIDIA P100 GPU. This is 10 million times faster than the existing forward modeling method and enables sensitivity tests of a larger scale than previously feasible.
 
 % BNN, assumptions in previous work
-\cite{hezaveh2017fast} and \cite{levasseur2017uncertainties} trained a BNN on HST-like images of strongly-lensed galaxies and showed that it was capable of accurately characterizing the posterior PDF over the parameters of a singular isothermal ellipsoid (SIE) lens mass profile when the form of the PDF was assumed to be Gaussian with a diagonal covariance matrix. The lens light was removed from the images before training and testing. \cite{wagnercarena2019double} found that the accuracy improved with a more flexible form of the posterior, a double Gaussian posterior with full covariance matrices. They report a $x \%$-level precision in parameter recovery for an elliptical power law lens mass profile.
+\cite{hezaveh2017fast} and \cite{levasseur2017uncertainties} trained a BNN on HST-like images of strongly-lensed galaxies and showed that it was capable of accurately characterizing the posterior over the parameters of a singular isothermal ellipsoid (SIE) lens mass profile when the form of the PDF was assumed to be Gaussian with a diagonal covariance matrix. The lens light was removed from the images before training and testing. \cite{wagnercarena2019double} found that the accuracy improved with a more flexible form of the posterior, a double Gaussian posterior with full covariance matrices. They report a $x \%$-level precision in parameter recovery for an elliptical power law lens mass profile.
 
+% Other CNN based work in general
+\cite{pearson2019use} reports a 34\% improvement in accuracy of lens model recovery when the lens light is removed from the images. 
 
-
-This work extends the BNN posterior modeling to images of lensed quasar systems with lens light included, following the dataset design of Rung 1 of the Time Delay Lens Modeling Challenge (TDLMC) \cite{ding2018time}, and further propagates the BNN-inferred posterior to $H_0$ inference. The BNN is trained to predict not only the parameters of the lens mass profile, assumed to be an elliptical power law, but also the half-light radius of the lens light and the quasar source position which are necessary to evaluate the likelihood of the lens kinematics and the time delays.
+This work extends the BNN posterior modeling to images of lensed quasar systems with lens light included, following the dataset design of Rung 1 of the Time Delay Lens Modeling Challenge (TDLMC) \cite{ding2018time}, and further propagates the BNN-inferred posterior to $H_0$ inference. The BNN is trained to predict not only the parameters of the lens mass profile, assumed to be an elliptical power law, but also the half-light radius of the lens light and the quasar source position which are necessary to evaluate the likelihood of the lens kinematics and the time delays. 
 
 As discussed in \cite{birrer2019astrometric}, the requirements on the source position is on the order of milliarcseconds. Adjustments must be made on the BNN architecture and loss function in order to improve the precision in source position recovery.
 
-Taking advantage of the computational efficiency, we evaluate the sensitivity of our BNN method on the prior choices of the lens kinematics and environment, the noise level, as well as the image configuration (double or quad).
+Taking advantage of the computational efficiency, we evaluate the sensitivity of our BNN method on the prior choices of the lens kinematics and environment, the noise level, as well as the image configuration (double or quad). 
+
+The paper is organized as follows. Section \ref{subsec:data} details the method used in simulating the datasets; Section \ref{subsec:model} the BNN architecture and assumed form of the lens posterior; Section \ref{subsec:optim} the training and validation of the BNN; and Section \ref{subsec:h0_inference} the $H_0$ inference scheme. Section \ref{sec:results} presents the $H_0$ recovery results on 400 test-set lenses with and without post-processing of the BNN-inferred posterior, as a function of the strength of prior assumptions on the lens kinematics and line-of-sight structure, the noise level, and the image configuration (double vs. quad). Throughout this paper, we assume a flat $\Lambda CDM$ cosmology with Hubble parameter $h = 67.4$ and matter density parameter $\Omega_m = 0.32$ following the latest Planck results \cite{aghanim2018planck}. 
